--- a/herbarium_export.info.yml
+++ b/herbarium_export.info.yml
@@ -1,6 +1,6 @@
 name: 'Herbarium Export'
 type: module
 description: 'Prepares CSV to export Herbarium digital assets'
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 core: 8.x
 package: 'agile'
